--- a/index.html
+++ b/index.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Matrizes</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.5.0/math.js"></script>
 </head>
+
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Calculadora de Matrizes</h1>
+        <h1>Calculadora de Matrizes</h1>
         <div id="matrixInput" class="mt-4"></div>
         <button class="btn btn-primary mt-2" onclick="addMatrix()">Adicionar Matriz</button>
         <button class="btn btn-danger mt-2" onclick="removeMatrix()">Remover Matriz</button>
         <div class="mt-4">
-            <label for="operation">Escolha a operação:</label>
-            <select class="form-control" id="operation">
-                <option value="soma">Soma</option>
-                <option value="subtracao">Subtração</option>
-                <option value="multiplicacao">Multiplicação</option>
-            </select>
+            <div class="select-operation">
+                <label for="operation">Escolha a operação:</label>
+                <select class="form-control" id="operation">
+                    <option value="soma">Soma</option>
+                    <option value="subtracao">Subtração</option>
+                    <option value="multiplicacao">Multiplicação</option>
+                </select>
+            </div>
             <button class="btn btn-success mt-2" onclick="calculateMatrices()">Calcular</button>
         </div>
         <div id="result" class="mt-4"></div>
         <hr>
-        <h2>Verificar Tipo de Matriz</h2>
-        <div id="typeChecker" class="mt-4">
-            <textarea class="form-control mb-2" id="matrixInputType" rows="4" placeholder="Digite a matriz separando os elementos por espaço e as linhas por nova linha. Ex: &#10;1 2 3&#10;4 5 6&#10;7 8 9"></textarea>
+        <div class="select-operation">
+            <h2>Análise de Matriz</h2>
+            <textarea class="form-control mb-2" id="matrixInputType" rows="4"
+                placeholder="Digite a matriz separando os elementos por espaço e as linhas por nova linha. Ex: &#10;1 2 3&#10;4 5 6&#10;7 8 9"></textarea>
             <button class="btn btn-primary" onclick="checkMatrixType()">Verificar Tipo</button>
+            <button class="btn btn-secondary ml-2" onclick="calculateInverse()">Calcular Inversa</button>
+            <button class="btn btn-info ml-2" onclick="transposeCurrentMatrix()">Matriz Transposta</button>
+            <button class="btn btn-warning ml-2" onclick="negativeCurrentMatrix()">Matriz Oposta</button>
         </div>
         <div id="typeResult" class="mt-4"></div>
+        <div id="inverseResult" class="mt-4"></div>
+        <div id="transposeResult" class="mt-4"></div>
+        <div id="negativeResult" class="mt-4"></div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
